--- a/about.html
+++ b/about.html
@@ -35,6 +35,14 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <div class="text-center">
+      <div>Liam Nichols</div>
+      <div>Vice President</div>
+      <div>Mathematics, Class of 2026</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/adrian.png" | relative_url }}" />
     <div class="text-center">
       <div>Adrian Lewis</div>
@@ -47,6 +55,7 @@ banner_text: |
     <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
+      <div>Economics, Class of 2025</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -54,7 +63,7 @@ banner_text: |
     <div class="text-center">
       <div>Theo Henson</div>
       <div>Website Manager</div>
-      <div>Computer Science and Philosophy, Class of 2027</div>
+      <div>Computer Science, Class of 2027</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -62,13 +71,7 @@ banner_text: |
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
-    <div class="text-center">
-      <div>Liam</div>
-      <div>Policy Researcher</div>
+      <div>Political Science, Class of 2025</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -76,6 +79,7 @@ banner_text: |
     <div class="text-center">
       <div>Robert</div>
       <div>Policy Researcher</div>
+      <div>Class of 2027</div>
     </div>
   </div>
 </div>
