--- a/about.html
+++ b/about.html
@@ -86,6 +86,14 @@
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Liam Nichols</div>
+      <div>Vice President</div>
+      <div>Mathematics, Class of 2026</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/adrian.png" />
     <div class="text-center">
       <div>Adrian Lewis</div>
@@ -98,6 +106,7 @@
     <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
+      <div>Economics, Class of 2025</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -105,7 +114,7 @@
     <div class="text-center">
       <div>Theo Henson</div>
       <div>Website Manager</div>
-      <div>Computer Science and Philosophy, Class of 2027</div>
+      <div>Computer Science, Class of 2027</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -113,13 +122,7 @@
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
-    <div class="text-center">
-      <div>Liam</div>
-      <div>Policy Researcher</div>
+      <div>Political Science, Class of 2025</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -127,6 +130,7 @@
     <div class="text-center">
       <div>Robert</div>
       <div>Policy Researcher</div>
+      <div>Class of 2027</div>
     </div>
   </div>
 </div>
