--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@ banner_text: |
 
 <h1 class="header">Upcoming Events</h1>
 
+
+
 <p>
     
 <div class="flex justify-center flex-wrap">
+
+  <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+    <h4 class="subheader">Featured flyer</h4>
+    <a href="{{ "/assets/pdf/sl-flyer.pdf" | relative_url }}">
+    <img class="hover-bigger w-max h-auto my-4 m-auto" src="{{ "assets/img/sl-flyer.png" | relative_url }}" />
+    </a>
+  </div>
 
   {% for event in site.events %}
     <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
