deploy: 956d22a2039002bf1ce8d405a97e52a6ef63008a

--- a/index.html
+++ b/index.html
@@ -59,18 +59,27 @@
       <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
         <h1 class="header">Upcoming Events</h1>
 
+
+
 <p>
     
 <div class="flex justify-center flex-wrap">
 
+  <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+    <h4 class="subheader">Featured flyer</h4>
+    <a href="/assets/pdf/sl-flyer.pdf">
+    <img class="hover-bigger w-max h-auto my-4 m-auto" src="/assets/img/sl-flyer.png" />
+    </a>
+  </div>
+
   
     <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
-      <div class="text-xl p-2">Pizzageneral 3</div>
+      <div class="text-xl p-2">Pizzageneral 4</div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
           <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
         </svg>
-        Wed Mar 27th
+        Wed Apr 24th
       </div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
@@ -79,7 +88,45 @@
         </svg>
         7pm in SCI 3.230
       </div>
-      <div><p>Our 3rd general body organization meeting of the semester. Pizza provided.</p>
+      <div><p>Our final general body organization meeting of the semester. Pizza provided.</p>
+</div>
+    </div>
+  
+    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+      <div class="text-xl p-2">Green Fee Town Hall 3</div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+        </svg>
+        Tue Apr 23rd
+      </div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+        </svg>
+        12pm in Galaxy Room C
+      </div>
+      <div><p>Student Government town hall for club members to attend so we can discuss endorsement the next day at our Pizzageneral. There are other town halls on Apr 16 and Apr 18 if that’s more convenient for you.</p>
+</div>
+    </div>
+  
+    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+      <div class="text-xl p-2">UTD Earth Fair</div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+        </svg>
+        Thu Apr 25th
+      </div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+        </svg>
+        11am in Visitor Center
+      </div>
+      <div>
 </div>
     </div>
   
