deploy: d5c11e0a64b3715e061b537d78bcb9fe81d30b14

--- a/randi.html
+++ b/randi.html
@@ -102,18 +102,22 @@
   It ends at the CityLine transit-oriented development next to the <a class="link" href="https://www.dart.org/guide/transit-and-use/rail/rail-station-detail/cityline-bush-station">CityLine/Bush Station</a>. where take the DART train on the Red or Orange line to reach downtown Dallas in about 40 minutes
 </p>
 
+<hr />
+
 <h4 class="subheader">DART busses</h4>
 
 <p>
   While using the 883 East, you'll see (and use, if you have a DART pass) the regular <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-232-frankford">DART bus 232</a>
   which runs a similar route near campus along Synergy, ending at CityLine, but starts from much further west.
-  Another DART bus that passes campus, except along Campbell Road, is <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-240-campbell">DART 240</a> which you can take south to Arapaho Road nearby a Walmart and USPS.
-  See DART 240 map:
+  Another DART bus that passes campus, except along Campbell Road, is <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-244-utd-campbell">DART 244</a> (which has replaced the old DART 240) that goes from the top of campus, linking the Silver Line UTD station (once it is completed) down to Arapaho Center Station on the Red Line.
+  See DART 244 map:
 </p>
 
-<a href="https://www.dart.org/trip/trip-planner/trip-planner-map?StopIdValue=&StopId=&SearchType=Route&RouteIdValue=25303&Submit=Search">
-<img class="hover-bigger w-max lg:w-[50%] h-auto my-4 m-auto" src="/assets/img/240.png" />
+<a href="https://www.dart.org/trip/trip-planner/trip-planner-map?StopIdValue=&StopId=&SearchType=Route&RouteIdValue=25695&Submit=Search">
+<img class="hover-bigger w-max lg:w-[50%] h-auto my-4 m-auto" src="/assets/img/244.png" />
 </a>
+
+<hr />
 
 <h4 class="subheader">Silver Line</h4>
 
@@ -132,7 +136,7 @@
 
 <p>
 
-  For information, to participate in our activism, and to join a welcoming community of others who use transit in the area, join the Comets for Better Transit Discord server.
+  For more information, to participate in our activism, and to join a welcoming community of others who use transit in the area, join the Comets for Better Transit Discord server.
 
 </p>
 
