--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ banner_text: |
 
 <div class="flex justify-center place-items-center flex-wrap">
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/chandu.jpg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/chandu.jpg" />
     <div class="text-center">
       <div>Chandu Garapaty</div>
       <div>President</div> 
@@ -35,23 +35,31 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Ben</div>
+      <div>Vice President</div>
+      <div></div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
       <div>Liam Nichols</div>
-      <div>Vice President</div>
+      <div>Policy Researcher</div>
       <div>Mathematics, Class of 2026</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/adrian.png" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Adrian Lewis</div>
+      <div>Robert</div>
       <div>Secretary</div>
-      <div>Mechanical Engineering, Class of 2024</div>
+      <div>Class of 2027</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
@@ -59,7 +67,15 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/theo.png" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Emma</div>
+      <div>Event Coordinator</div>
+      <div></div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/theo.png" />
     <div class="text-center">
       <div>Theo Henson</div>
       <div>Website Manager</div>
@@ -67,19 +83,11 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
       <div>Political Science, Class of 2025</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
-    <div class="text-center">
-      <div>Robert</div>
-      <div>Policy Researcher</div>
-      <div>Class of 2027</div>
     </div>
   </div>
 </div>
