deploy: 13b92c3e923014df0e58ada9adb665d9a5794dc9

--- a/about.html
+++ b/about.html
@@ -88,17 +88,25 @@
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Liam Nichols</div>
+      <div>Ben</div>
       <div>Vice President</div>
+      <div></div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Liam Nichols</div>
+      <div>Policy Researcher</div>
       <div>Mathematics, Class of 2026</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/adrian.png" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Adrian Lewis</div>
+      <div>Robert</div>
       <div>Secretary</div>
-      <div>Mechanical Engineering, Class of 2024</div>
+      <div>Class of 2027</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -107,6 +115,14 @@
       <div>Johnathan Dang</div>
       <div>Social Media</div>
       <div>Economics, Class of 2025</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Emma</div>
+      <div>Event Coordinator</div>
+      <div></div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -123,14 +139,6 @@
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
       <div>Political Science, Class of 2025</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
-    <div class="text-center">
-      <div>Robert</div>
-      <div>Policy Researcher</div>
-      <div>Class of 2027</div>
     </div>
   </div>
 </div>
