--- a/randi.html
+++ b/randi.html
@@ -8,18 +8,23 @@ banner_text: |
 <h1 class="header">DART is Free on Election Day!</h1>
 
 <p>
-
 DART is offering free rides to polling locations on Tuesday, November 5, 2024!
-
-Ride at no charge on all DART buses, trains, GoLink, the Dallas Streetcar, Paratransit Services, and the TRE between EBJ Union Station and CentrePort/DFW Airport Station.
-You only need to show your valid voter registration card to ride for free on that day.
-
-If you plan to use GoLink, use promo code VOTEPRES at checkout for a complimentary Adult Local Day Pass in the GoPass app on Tuesday, November 5 only.
-
-Learn more on <a href="https://www.dart.org/about/news-and-events/ride-dart-free-to-vote">DART's website</a>.
-
 </p>
 
+<p>
+Ride at no charge on all DART buses, trains, GoLink, the Dallas Streetcar, Paratransit Services, and the TRE between EBJ Union Station and CentrePort/DFW Airport Station.
+You only need to show your valid voter registration card to ride for free on that day.
+</p>
+
+<p>
+If you plan to use GoLink, use promo code VOTEPRES at checkout for a complimentary Adult Local Day Pass in the GoPass app on Tuesday, November 5 only.
+</p>
+
+<p>
+Learn more on <a class="link" href="https://www.dart.org/about/news-and-events/ride-dart-free-to-vote">DART's website</a>.
+</p>
+
+<hr />
 
 <h1 class="header">Free DART Pass for UT Dallas Students</h1>
 
@@ -43,6 +48,7 @@ Learn more on <a href="https://www.dart.org/about/news-and-events/ride-dart-free
 
 </p>
 
+<hr />
 
 <h1 class="header">Transit Near Campus</h1>
 
@@ -95,6 +101,7 @@ Learn more on <a href="https://www.dart.org/about/news-and-events/ride-dart-free
 
 </p>
 
+<hr />
 
 <h1 class="header">Our Discord</h1>
 
