--- a/about.html
+++ b/about.html
@@ -67,11 +67,11 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/emma.jpg" />
     <div class="text-center">
-      <div>Emma</div>
+      <div>Emma Liu</div>
       <div>Event Coordinator</div>
-      <div></div>
+      <div>Chemistry, Class of 2025</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
