--- a/index.html
+++ b/index.html
@@ -65,40 +65,21 @@
 
   
     <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
-      <div class="text-xl p-2">City Council Comp Plan Public Hearing</div>
+      <div class="text-xl p-2">DATA Meeting with Nadine Lee</div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
           <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
         </svg>
-        Mon Nov 11th
+        Sat Nov 16th
       </div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
           <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
         </svg>
-        2360 Campbell Creek Blvd @ 6 PM
+        1:30PM - 4PM
       </div>
-      <div>
-</div>
-    </div>
-  
-    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
-      <div class="text-xl p-2">November Pizza Social</div>
-      <div class="m-2">
-        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
-          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
-        </svg>
-        Wed Nov 13th
-      </div>
-      <div class="m-2">
-        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
-          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
-        </svg>
-        FN 2.302 @ 7 PM
-      </div>
-      <div>
+      <div><p><img src="/assets/img/nadine.png" class="w-[100px] h-[100px] my-4 m-auto" alt="DATA Meeting flyer" loading="lazy" /></p>
 </div>
     </div>
   
@@ -117,8 +98,8 @@
         </svg>
         Downtown Richardson @ 12PM - 4PM
       </div>
-      <div><p>Going to downtown Richardson for the 
-<a class="link" href="https://www.richardsoncoredistrict.com/events">free multicultural event</a></p>
+      <div><p>Culture in The CORE is a free, family-friendly event that takes place each fall and brings together Richardson’s diverse communities to have fun, to learn and to experience the music, dance, foods and arts of different cultures. Culture in The CORE will include a variety of local culinary options, drinks, shopping and live entertainment. Popular vendors will also be in attendance, offering a selection of items for purchase. admision is free!
+Location: Main Street Plaza, 105 South Interurban Street Richardson, TX 75081</p>
 </div>
     </div>
   
