deploy: 9b83cb5fc4487d9c881a28845aa1515a12640e07

--- a/about.html
+++ b/about.html
@@ -74,21 +74,22 @@
 
 </p>
 
+
 <h1 class="header" >Our Officers</h1>
 
 <div class="flex justify-center place-items-center flex-wrap">
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/chandu.jpg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Chandu Garapaty</div>
+      <div>Ben</div>
       <div>President</div> 
-      <div>Healthcare Studies, Class of 2025</div> 
+      <div></div> 
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Ben</div>
+      <div>Harrison</div>
       <div>Vice President</div>
       <div></div>
     </div>
