--- a/index.html
+++ b/index.html
@@ -57,7 +57,23 @@
       </div>
 
       <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
-        <h1 class="header">Upcoming Events</h1>
+        <h1 class="header">Message From Our Former President</h1>
+
+<div class="p-4 my-4 border-s-4 border-gray-300 bg-gray-200">
+<p class="text-xl italic font-medium leading-relaxed text-gray-900">
+Happy New Year! We've achieved so much this year, like making 15 minute frequency on the 883 East permanent, getting a student housing development amended to add even more beds, and preventing the Board of Directors from cutting DART's funding. The Richardson Comprehensive Plan, while not perfect, prioritizes walkable mixed-use development, paving the way for better land use. 
+<br />
+<br />
+All of this has only been possible because you showed up and engaged with our local government and DART. The future may hold challenges, but it holds opportunities for progress as well. Your persistence and determination will be the decisive factors. In this new year, I encourage you to keep turning your dreams into action!
+<br />
+<br />
+Best,
+<br />
+Chandu
+</p>
+</div>
+
+<h1 class="header">Upcoming Events</h1>
 
 <p>
     
@@ -65,12 +81,69 @@
 
   
     <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
-      <div class="text-xl p-2">December Pizza Social</div>
+      <div class="text-xl p-2">February Pizza Social</div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
           <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
         </svg>
-        Wed Dec 4th
+        Wed Feb 5th
+      </div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+        </svg>
+        FN 2.302 @ 7 PM
+      </div>
+      <div><p>The first Pizza Social (our general meeting) of the semester!</p>
+</div>
+    </div>
+  
+    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+      <div class="text-xl p-2">March Pizza Social</div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+        </svg>
+        Wed Mar 12th
+      </div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+        </svg>
+        FN 2.302 @ 7 PM
+      </div>
+      <div>
+</div>
+    </div>
+  
+    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+      <div class="text-xl p-2">April Pizza Social</div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+        </svg>
+        Wed Apr 16th
+      </div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+        </svg>
+        FN 2.302 @ 7 PM
+      </div>
+      <div>
+</div>
+    </div>
+  
+    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+      <div class="text-xl p-2">May Pizza Social</div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+        </svg>
+        Wed May 7th
       </div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
