Add event, format html, create todo

--- a/randi.html
+++ b/randi.html
@@ -49,6 +49,24 @@ banner_text: |
 
 <hr />
 
+<h4 class="subheader">UTD-UTSW Shuttle</h4>
+
+<p>
+  The UTD Office of the Provost continues to sponsor a free shuttle service from UTD to the Texas Instruments Biomedical Engineering and Sciences Building (TI-NMES) on the East Campus of the UT Southwestern Medical Center (UTSW).
+  For the Spring 2025 semester, the schedule, shown below, has been revised and the shuttle has been upgraded to a 25-seat minibus.
+</p>
+
+<ul class="list-bullet">
+  <li>7:30am: Depart UTD</li>
+  <li>8:45am: Depart TI-BMES</li>
+  <li>10:30am: Depart UTD</li>
+  <li>4pm: Depart TI-BMES</li>
+  <li>5pm: Depart UTD</li>
+  <li>6pm: Depart TI-BMES</li>
+  <li>7pm: Depart UTD</li>
+  <li>8pm: Depart TI-BMES</li>
+</ul>
+
 
 <h4 class="subheader">DART busses</h4>
 
