Update transite on campus section

--- a/randi.html
+++ b/randi.html
@@ -28,7 +28,17 @@ banner_text: |
 
 <h1 class="header">Transit Near Campus</h1>
 
-<h4 class="subheader">Comet Cruiser</h4>
+<p class="text-center">Quick links: 
+  <a class="link" href="#comet-cruiser">Comet Cruiser</a>, 
+  <a class="link" href="#dart-busses">Dart Busses</a>, 
+  <a class="link" href="#utd-utsw-shuttle">UTD-UTSW Shuttle</a>, 
+  <a class="link" href="#core-shuttle">CORE Shuttle</a>, 
+  <a class="link" href="#silver-line">Silver Line</a>.
+</p>
+
+<hr />
+
+<h4 id="comet-cruiser" class="subheader">Comet Cruiser</h4>
 
 <p>
   The <a class="link" href="https://services.utdallas.edu/transit/cruiser/">Comet Cruiser</a> is shuttle bus run by a partnership of UTD and DART that follows a short local route, without the need of any ticket to board.
@@ -49,26 +59,7 @@ banner_text: |
 
 <hr />
 
-<h4 class="subheader">UTD-UTSW Shuttle</h4>
-
-<p>
-  The UTD Office of the Provost continues to sponsor a free shuttle service from UTD to the Texas Instruments Biomedical Engineering and Sciences Building (TI-NMES) on the East Campus of the UT Southwestern Medical Center (UTSW).
-  For the Spring 2025 semester, the schedule, shown below, has been revised and the shuttle has been upgraded to a 25-seat minibus.
-</p>
-
-<ul class="list-bullet">
-  <li>7:30am: Depart UTD</li>
-  <li>8:45am: Depart TI-BMES</li>
-  <li>10:30am: Depart UTD</li>
-  <li>4pm: Depart TI-BMES</li>
-  <li>5pm: Depart UTD</li>
-  <li>6pm: Depart TI-BMES</li>
-  <li>7pm: Depart UTD</li>
-  <li>8pm: Depart TI-BMES</li>
-</ul>
-
-
-<h4 class="subheader">DART busses</h4>
+<h4 id="dart-busses" class="subheader">DART busses</h4>
 
 <p>
   While using the 883 East, you'll see (and use, if you have a DART pass) the regular <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-232-frankford">DART bus 232</a>
@@ -83,8 +74,54 @@ banner_text: |
 
 <hr />
 
+<h4 id="utd-utsw-shuttle" class="subheader">UTD-UTSW Shuttle</h4>
 
-<h4 class="subheader">Silver Line</h4>
+<p>
+  The UTD Office of the Provost continues to sponsor a free shuttle service from UTD to the Texas Instruments Biomedical Engineering and Sciences Building (TI-NMES) on the East Campus of the UT Southwestern Medical Center (UTSW).
+  The <a class="link" href="https://www.google.com/maps/place/X6RX%2BPH,+Richardson,+TX/@32.9915983,-96.7511449,18.72z/data=!4m5!3m4!1s0x864c1ee979bea767:0x82bc6b208f128614!8m2!3d32.9918125!4d-96.7510625?entry=ttu&g_ep=EgoyMDI1MDEyOS4xIKXMDSoASAFQAw%3D%3D">pickup and drop-off location at UT Dallas</a> is the bus stop on the west side of Rutford Avenue near Capella Hall.
+  For the Spring 2025 semester, the schedule, shown below, has been revised and the shuttle has been upgraded to a 25-seat minibus.
+</p>
+
+<ul class="list-disc">
+  <li>7:30am: Depart UTD</li>
+  <li>8:45am: Depart TI-BMES</li>
+  <li>10:30am: Depart UTD</li>
+  <li>4pm: Depart TI-BMES</li>
+  <li>5pm: Depart UTD</li>
+  <li>6pm: Depart TI-BMES</li>
+  <li>7pm: Depart UTD</li>
+  <li>8pm: Depart TI-BMES</li>
+</ul>
+
+<hr />
+
+<h4 id="core-shuttle" class="subheader">The CORE Shuttle</h4>
+
+<p>
+  The City of Richardson has partnered with UT Dallas to provide free shuttle service between our campus and the Richardson CORE District for UTD students on Friday and Saturday evenings, from 7:00 p.m. to 11:00 p.m.
+  For more information, visit the <a class="link" href="https://services.utdallas.edu/transit/core/">UTD CORE Shuttle webpage</a>.
+</p>
+
+<ul class="list-disc">
+  <li>UTD Campus at Synergy Park near Northside Blvd. entrance.
+      Departures: 7:00, 8:00, 9:00, 10:00 p.m.</li>
+  <li>UTD Campus at Bus Station across from Activities Center.
+      Departures: 7:05, 8:05, 9:05, 10:05 p.m.</li>
+  <li>Interurban near Four Bullets Brewery.
+      Departures: 7:20, 8:20, 9:20, 10:20 p.m.</li>
+  <li>Chinatown near Dallas Chinese Community Center.
+      Departures: 7:25, 8:25, 9:25, 10:25 p.m</li>
+  <li>Downtown in parking lot on north side of Main St., between Texas St. and McKinney St.
+    Departures: 7:30, 8:30, 9:30, 10:30 p.m.</li>
+  <li>Heights near Alamo Drafthouse Cinema.
+      Departures: 7:35, 8:35, 9:35, 10:35 p.m.</li>
+  <li>Lockwood near Happy Hippie Brewing Company.
+      Departures: 7:40, 8:40, 9:40, 10:40 p.m.</li>
+</ul>
+
+<hr />
+
+<h4 id="silver-line" class="subheader">Silver Line</h4>
 
 <p>
   The <a class="link" href="https://www.dart.org/about/plans-projects-and-initiatives/expansion/silver-line-project">Silver Line</a>
