Update formatting of homepage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ banner_text: |
 
 <h1 class="header">Message From Our Former President</h1>
 
-<div class="p-4 my-4 border-s-4 border-gray-300 bg-gray-200">
+<div class="py-4 px-8 my-4 border-s-4 border-gray-300 bg-gray-200">
 <p class="text-xl italic font-medium leading-relaxed text-gray-900">
 Happy New Year! We've achieved so much this year, like making 15 minute frequency on the 883 East permanent, getting a student housing development amended to add even more beds, and preventing the Board of Directors from cutting DART's funding. The Richardson Comprehensive Plan, while not perfect, prioritizes walkable mixed-use development, paving the way for better land use. 
 <br />
