--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   
     <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
-      <div class="text-xl p-2">April Pizza Social</div>
+      <div class="text-xl p-2">Richardson Mayor and City Council Candidate Forum</div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
           <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
@@ -77,9 +77,9 @@
           <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
           <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
         </svg>
-        FN 2.304 @ 7 PM
+        Eisemann Center (next to Galatyn Park Station) @ 7 PM
       </div>
-      <div>
+      <div><p>Join us in attending this candidate forum for the contested Mayor and City Council races.</p>
 </div>
     </div>
   
