deploy: 726315236919df7485eb86f6a0bcf8a571a924f4

--- a/about.html
+++ b/about.html
@@ -113,10 +113,11 @@
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/colin.jpg" />
     <div class="text-center">
       <div>Colin</div>
       <div>Event Manager</div>
+      <div>Computer Science, Class of 2027</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
