deploy: ad12fd64241b0f44b4b551b77554ccfe7721c2e6

--- a/randi.html
+++ b/randi.html
@@ -72,7 +72,6 @@
 <p>
   The GoPass app is also the best way to navigate and plan trips with the DART system, with more accurate arrival times than other apps such as Google or Apple Maps.
   Physical passes can also be acquired by contacting <a class="link" href="mailto:park@utdallas.edu">park@utdallas.edu</a>.
-  UTD faculty and staff can also get free passes through <a class="link" href="https://services.utdallas.edu/tools/dart/">a separate form</a>.
 </p>
 
 <hr />
@@ -81,11 +80,21 @@
 <h1 class="header">Transit Near Campus</h1>
 
 <p class="text-center">Quick links: 
+  <a class="link" href="#silver-line">Silver Line</a>.
   <a class="link" href="#comet-cruiser">Comet Cruiser</a>, 
   <a class="link" href="#dart-busses">Dart Busses</a>, 
   <a class="link" href="#utd-utsw-shuttle">UTD-UTSW Shuttle</a>, 
   <a class="link" href="#core-shuttle">CORE Shuttle</a>, 
-  <a class="link" href="#silver-line">Silver Line</a>.
+</p>
+
+<hr />
+
+<h4 id="silver-line" class="subheader">Silver Line</h4>
+
+<p>
+  The long-awaited <a class="link" href="https://www.dart.org/guide/transit-and-use/rail/rail-line-details/silver-line">Silver Line</a> is now open!
+  It runs from Grapevine to Plano, notably with a stop right at UTD, by the Northside Apartments.
+	It provides easy access from campus to the DFW airport. It also allows for faster access to downtown Dallas via the Red Line transferring at CityLine/Bush.
 </p>
 
 <hr />
@@ -106,7 +115,6 @@
   They run from 10am to 6pm on Sundays and 7am to 11pm on all other days, with 15 minute frequency on weekdays and 30 minutes on weekends.
   The 883 East route runs starts from the <a class="link" href="https://map.utdallas.edu/?id=1772#!m/503632">UTD bus stop</a> (near the traffic circle by JSOM),
   with stops along Synergy Park Blvd and Waterview Pkwy, closer to the dorms and apartments if you live on campus.
-  It ends at the CityLine transit-oriented development next to the <a class="link" href="https://www.dart.org/guide/transit-and-use/rail/rail-station-detail/cityline-bush-station">CityLine/Bush Station</a>. where take the DART train on the Red or Orange line to reach downtown Dallas in about 40 minutes
 </p>
 
 <hr />
@@ -170,18 +178,6 @@
   <li>Lockwood near Happy Hippie Brewing Company.
       Departures: 7:40, 8:40, 9:40, 10:40 p.m.</li>
 </ul>
-
-<hr />
-
-<h4 id="silver-line" class="subheader">Silver Line</h4>
-
-<p>
-  The <a class="link" href="https://www.dart.org/about/plans-projects-and-initiatives/expansion/silver-line-project">Silver Line</a>
-  is a DART train line in the process of being constructed, with service anticipated in late 2025 to mid-2026.
-  It will run east to west from Grapevine to Plano, notably with a stop right at UTD, just north of the Northside Apartments.
-  Once it is constructed, you will be able to easily get to, for example, the DFW airport in much less time than the current route (taking the train south, downtown, then northwest out to the airport) and for much less money than an Uber or Lyft.
-  You will also be able to take it east to get to CityLine/Bush quicker than the bus.
-</p>
 
 <hr />
 
