Fix quick links punctuation

--- a/randi.html
+++ b/randi.html
@@ -27,10 +27,10 @@ banner_text: |
 <h1 class="header">Transit Near Campus</h1>
 
 <p class="text-center">Quick links: 
-  <a class="link" href="#silver-line">Silver Line</a>.
+  <a class="link" href="#silver-line">Silver Line</a>,
   <a class="link" href="#comet-cruiser">Comet Cruiser</a>, 
   <a class="link" href="#dart-busses">Dart Busses</a>, 
-  <a class="link" href="#utd-utsw-shuttle">UTD-UTSW Shuttle</a>, 
+  <a class="link" href="#utd-utsw-shuttle">UTD-UTSW Shuttle</a>.
 </p>
 
 <hr />
